force-app/main/default/objects/Asset/fields/AC_Equip_Cap__c.field-meta.xml
<CustomField>
    <fullName>AC_Equip_Cap__c</fullName>
    <label>AC Equipment Capacity (kVA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>