force-app/main/default/objects/Asset/fields/AC_Equip_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>AC_Equip_Sub_Type__c</fullName>
    <label>AC Equipment Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Fossil</fullName>
            </value>
            <value>
                <fullName>Hydro</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Biomass/Waste</fullName>
            </value>
            <value>
                <fullName>Geothermal</fullName>
            </value>
            <value>
                <fullName>Co- / Tri-generation</fullName>
            </value>
            <value>
                <fullName>Bio Gas</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Electric Car</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Fuel Cell</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Tidal</fullName>
            </value>
            <value>
                <fullName>Wave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>