force-app/main/default/objects/Asset/fields/AC_Equip_Type__c.field-meta.xml
<CustomField>
    <fullName>AC_Equip_Type__c</fullName>
    <label>AC Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inverter</fullName>
            </value>
            <value>
                <fullName>Non-Inverter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>