force-app/main/default/objects/Asset/fields/AEMO_Id__c.field-meta.xml
<CustomField>
    <fullName>AEMO_Id__c</fullName>
    <label>AEMO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>