force-app/main/default/objects/Asset/fields/AEMO_Status__c.field-meta.xml
<CustomField>
    <fullName>AEMO_Status__c</fullName>
    <label>AEMO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>