force-app/main/default/objects/Asset/fields/Asset_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Asset_Hierarchy__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
&apos;Asset_DER_L2&apos;, Conn_Point__r.NMI__c &amp; &quot;/&quot; &amp; Name,
&apos;Asset_DER_L3&apos;, Parent.Conn_Point__r.NMI__c &amp; &quot;/&quot; &amp; Parent.Name &amp; &quot;/&quot; &amp; Name,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Hierarchy</label>
    <type>Text</type>
</CustomField>