force-app/main/default/objects/Asset/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <displayFormat>Asset-{0000000}</displayFormat>
    <label>Asset Id</label>
    <type>AutoNumber</type>
</CustomField>