force-app/main/default/objects/Asset/fields/AutoAugCapCopied__c.field-meta.xml
<CustomField>
    <fullName>AutoAugCapCopied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoAugCapCopied</label>
    <type>Checkbox</type>
</CustomField>