force-app/main/default/objects/Asset/fields/Commissioning_Date__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Date__c</fullName>
    <label>Commissioning Date</label>
    <type>Date</type>
</CustomField>