force-app/main/default/objects/Asset/fields/Conn_Point__c.field-meta.xml
<CustomField>
    <fullName>Conn_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connection Point</label>
    <referenceTo>Connection_Point__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>