force-app/main/default/objects/Asset/fields/Decommissioning_Date__c.field-meta.xml
<CustomField>
    <fullName>Decommissioning_Date__c</fullName>
    <label>Decommissioning Date</label>
    <type>Date</type>
</CustomField>