force-app/main/default/objects/Asset/fields/Device_Count__c.field-meta.xml
<CustomField>
    <fullName>Device_Count__c</fullName>
    <label>Device Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>