force-app/main/default/objects/Asset/fields/Device_Phase__c.field-meta.xml
<CustomField>
    <fullName>Device_Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>3 Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>