force-app/main/default/objects/Asset/fields/Device_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Sub_Type__c</fullName>
    <label>Device Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monocrystalline</fullName>
            </value>
            <value>
                <fullName>Polycrystalline</fullName>
            </value>
            <value>
                <fullName>Thin-film</fullName>
            </value>
            <value>
                <fullName>Concentrating PV</fullName>
            </value>
            <value>
                <fullName>Silicon</fullName>
            </value>
            <value>
                <fullName>Biohybrid</fullName>
            </value>
            <value>
                <fullName>Cadmium telluride</fullName>
            </value>
            <value>
                <fullName>Lithium-ion</fullName>
            </value>
            <value>
                <fullName>Lead acid</fullName>
            </value>
            <value>
                <fullName>Lead carbon sodium nickel</fullName>
            </value>
            <value>
                <fullName>Lead crystal</fullName>
            </value>
            <value>
                <fullName>Absorbed glass matt</fullName>
            </value>
            <value>
                <fullName>Vanadium</fullName>
            </value>
            <value>
                <fullName>Aqueous hybrid ion</fullName>
            </value>
            <value>
                <fullName>Tubular gel</fullName>
            </value>
            <value>
                <fullName>Zinc bromide</fullName>
            </value>
            <value>
                <fullName>Electric Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>