force-app/main/default/objects/Asset/fields/DRED_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DRED_Enabled__c</fullName>
    <label>DRED Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>