force-app/main/default/objects/Asset/fields/Equip_Power_Factor__c.field-meta.xml
<CustomField>
    <fullName>Equip_Power_Factor__c</fullName>
    <label>Equipment Power Factor (PF)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>