force-app/main/default/objects/Asset/fields/Expected_Annual_Export__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Export__c</fullName>
    <label>Expected Annual Export (kWh)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>