force-app/main/default/objects/Asset/fields/FLC_Single_Phase_to_Ground__c.field-meta.xml
<CustomField>
    <fullName>FLC_Single_Phase_to_Ground__c</fullName>
    <label>Fault Level Single Ph to Ground (A)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>