force-app/main/default/objects/Asset/fields/Fstop_over_freq__c.field-meta.xml
<CustomField>
    <fullName>Fstop_over_freq__c</fullName>
    <label>Fstop (over freq)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>