force-app/main/default/objects/Asset/fields/Inv_Fixed_Power_Factor__c.field-meta.xml
<CustomField>
    <fullName>Inv_Fixed_Power_Factor__c</fullName>
    <label>Inv Fixed Power Factor</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>