force-app/main/default/objects/Asset/fields/Inv_Fixed_Power_Factor_Quad__c.field-meta.xml
<CustomField>
    <fullName>Inv_Fixed_Power_Factor_Quad__c</fullName>
    <label>Inv Fixed Power Factor Quadrant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Sink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>