force-app/main/default/objects/Asset/fields/Inv_Fixed_Reactive_Power__c.field-meta.xml
<CustomField>
    <fullName>Inv_Fixed_Reactive_Power__c</fullName>
    <label>Inv Fixed Reactive Power</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>