force-app/main/default/objects/Asset/fields/Inv_Power_Factor_P1__c.field-meta.xml
<CustomField>
    <fullName>Inv_Power_Factor_P1__c</fullName>
    <label>Inv Power Factor at P1</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>