force-app/main/default/objects/Asset/fields/Inv_Power_Factor_Quad_P2__c.field-meta.xml
<CustomField>
    <fullName>Inv_Power_Factor_Quad_P2__c</fullName>
    <label>Inv Power Factor Quadrant at P2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Sink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>