force-app/main/default/objects/Asset/fields/Inv_Var_Response_Q_at_V3__c.field-meta.xml
<CustomField>
    <fullName>Inv_Var_Response_Q_at_V3__c</fullName>
    <label>Inv Var Response Q at V3</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>