force-app/main/default/objects/Asset/fields/Inv_Var_Response_V1__c.field-meta.xml
<CustomField>
    <fullName>Inv_Var_Response_V1__c</fullName>
    <label>Inv Var Response V1</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>