force-app/main/default/objects/Asset/fields/Inv_Vnom_max__c.field-meta.xml
<CustomField>
    <fullName>Inv_Vnom_max__c</fullName>
    <label>Inv Vnom-max</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>