force-app/main/default/objects/Asset/fields/Inv_Volt_Var_Response_Mode__c.field-meta.xml
<CustomField>
    <fullName>Inv_Volt_Var_Response_Mode__c</fullName>
    <label>Inv Volt Var Response Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Not Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>