force-app/main/default/objects/Asset/fields/Inv_Watt_Response_P_at_V3__c.field-meta.xml
<CustomField>
    <fullName>Inv_Watt_Response_P_at_V3__c</fullName>
    <label>Inv Watt Response P at V3</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>