force-app/main/default/objects/Asset/fields/Legacy_Data_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Data_Id__c</fullName>
    <label>Legacy Data Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>