force-app/main/default/objects/Asset/fields/Legacy_L2_Asset__c.field-meta.xml
<CustomField>
    <fullName>Legacy_L2_Asset__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Asset_DER_L2&apos;, Legacy_Data_Id__c, Legacy_Data_Parent_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy_L2_Asset</label>
    <type>Text</type>
</CustomField>