force-app/main/default/objects/Asset/fields/Max_Total_Harmonics__c.field-meta.xml
<CustomField>
    <fullName>Max_Total_Harmonics__c</fullName>
    <label>Maximum Total Harmonics (%)</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>