force-app/main/default/objects/Asset/fields/NMI_AEMO_Id__c.field-meta.xml
<CustomField>
    <fullName>NMI_AEMO_Id__c</fullName>
    <externalId>true</externalId>
    <label>NMI / AEMO Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>