force-app/main/default/objects/Asset/fields/Nominal_Rated_Cap__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Rated_Cap__c</fullName>
    <label>Nominal Rated Capacity (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>