force-app/main/default/objects/Asset/fields/Nominal_Storage_Cap__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Storage_Cap__c</fullName>
    <label>Nominal Storage Capacity (kWh)</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>