force-app/main/default/objects/Asset/fields/Nominal_Volt_Connection_Network__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Volt_Connection_Network__c</fullName>
    <label>Nominal Voltage at Connection Network(V)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>