force-app/main/default/objects/Asset/fields/Non_Inv_Deadband__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Deadband__c</fullName>
    <label>Non-Inv Deadband</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>