force-app/main/default/objects/Asset/fields/Non_Inv_Droop__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Droop__c</fullName>
    <label>Non-Inv Droop</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>