force-app/main/default/objects/Asset/fields/Non_Inv_Gen_Freq_Droop__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Gen_Freq_Droop__c</fullName>
    <label>Non-Inv Gen Freq Droop</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>