force-app/main/default/objects/Asset/fields/Non_Inv_Inter_Trip_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Inter_Trip_Scheme__c</fullName>
    <label>Non-Inv Inter-Trip Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>