force-app/main/default/objects/Asset/fields/Non_Inv_Power_Ramp_Gradient__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Power_Ramp_Gradient__c</fullName>
    <label>Non-Inv Power Ramp Gradient (%/min)</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>