force-app/main/default/objects/Asset/fields/Non_Inv_Rate_of_Change_of_Freq__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Rate_of_Change_of_Freq__c</fullName>
    <label>Non-Inv Rate of Change of Freq (RoCoF)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>