force-app/main/default/objects/Asset/fields/Non_Inv_Reactive_Fixed_Power_Factor__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Reactive_Fixed_Power_Factor__c</fullName>
    <label>Non-Inv Reactive Fixed Power Factor</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>