force-app/main/default/objects/Asset/fields/Non_Inv_Reactive_Fixed_Power_Factor_Quad__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Reactive_Fixed_Power_Factor_Quad__c</fullName>
    <label>Non-Inv Reactive Fixed Power Factor Quad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Sink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>