force-app/main/default/objects/Asset/fields/Non_Inv_Reactive_Power_Sink_Limit__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Reactive_Power_Sink_Limit__c</fullName>
    <label>Non-Inv Reactive Power Sink Limit (Var)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>