force-app/main/default/objects/Asset/fields/Non_Inv_Volt_Set_Point__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Volt_Set_Point__c</fullName>
    <label>Non-Inv Volt Set Point</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>