force-app/main/default/objects/Asset/fields/Non_Inv_Voltage_Vector_Shift__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Voltage_Vector_Shift__c</fullName>
    <label>Non-Inv Voltage Vector Shift</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>