force-app/main/default/objects/Asset/fields/Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Serial_Numbers__c</fullName>
    <label>Serial Number(s)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>