force-app/main/default/objects/Asset/fields/Site_Load_without_Generation__c.field-meta.xml
<CustomField>
    <fullName>Site_Load_without_Generation__c</fullName>
    <label>Site Load without Generation (kVA)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>