force-app/main/default/objects/Asset/fields/Sub_Transient_Impedance__c.field-meta.xml
<CustomField>
    <fullName>Sub_Transient_Impedance__c</fullName>
    <label>Sub-Transient Impedance (X&quot;)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>